Change Package Name an lowercase

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Adikpeto/Feexpay",
+    "name": "adikpeto/feexpay",
     "type": "library",
     "description": "Agrégateur de paiement",
     "keywords": [
