--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability":"stable",
     "require": {
         "php" : "~7.2"
     },
